--- a/edu.gmu.cs.infs740.music/.settings/org.eclipse.wst.common.component
+++ b/edu.gmu.cs.infs740.music/.settings/org.eclipse.wst.common.component
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project-modules id="moduleCoreId" project-version="1.5.0">
+<?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
 	<wb-module deploy-name="edu.gmu.cs.infs740.music">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
 		<wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
 		<wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
 		<property name="java-output-path" value="target/classes"/>
-        <property name="context-root" value="cs"/>
+        <property name="context-root" value="edu.gmu.cs.infs740.music"/>
 	</wb-module>
 </project-modules>
